# Velox

./: .detoxrc.js  .gitattributes  .gitignore  PRIVACY.md  README.md  Velox.code-workspace  app.json  database.types.ts  metro.config.js  package-lock.json  package.json  tailwind.config.js
android/: settings.gradle
android/app/: build.gradle
assets/: splash.json
assets/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  ru.json  zh.json
backend/: Cargo.toml
backend/src/: main.rs  routes.rs  types.rs  utils.rs
backend/src/routes/: users.rs  verify.rs
docs/: index.html  policy_de.html  policy_fr.html  policy_ru.html  policy_zh.html
docs/assets/: index-0vzvmLMD.js  index-6IKIPLhD.css  index-AF-aOlWr.js  index-BDM-s4Lc.css  index-BvhIf_vK.js  index-C3fqRzZj.js  index-CL9pcjmQ.css  index-DeTVLrWK.js  index-Dn5RR8FJ.js  index-DqY61SQ-.js  index-MEjOkFYL.js  index-zV9Kx51S.js
e2e/: screenshot.js  starter.test.js  ui.test.js
ios/: Podfile
ios/Velox/: Info.plist  SplashScreen.storyboard
ios/Velox.xcodeproj/: project.pbxproj
ios/Velox.xcworkspace/: contents.xcworkspacedata
maestro/: ui.yaml
src/app/: _layout.tsx  auth.tsx  difficulty.tsx  home.tsx  index.tsx  info.tsx  leaderboard.tsx  multiplayer.tsx  play.tsx  profile.tsx  results.tsx  secret.tsx  settings.tsx  sign-in.tsx  sign-up.tsx
src/components/: ApproxSlider.tsx  CurvedText.tsx  GameInfo.tsx  GameOverModal.tsx  HoloText.tsx  HolographicText.tsx  Keypad.tsx  LanguageButton.tsx  Letters.tsx  Lives.tsx  (+3 more)
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+58 files in other folders)
