[package]
name = "velox-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lettre = "0.11.11"
axum = { version = "0.8.1" }
axum-extra = "0.10.0"
serde = "1.0.188"
serde_json = "1.0.132"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
openssl = { version = "0.10.68", features = ["vendored"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.mongodb]
version = "3.1.0"
